[功能更新]   1.添加 重置密码界面交互   2.优化 更改登录失败三次以上提示语   3.优化 注册界面按钮交互

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">吉方云助</string>
     <string name="ch_edt_login_accout">邮 箱</string>
     <string name="ch_edt_login_account">密 码</string>
-    <string name="ch_btn_login_forgot">忘记密码</string>
+    <string name="ch_btn_login_forgot">找回密码</string>
     <string name="ch_btn_login_register">用户注册</string>
 </resources>
